# cgp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cgp/: __init__.py  cgp.py  config.py  utils.py
tests/: conftest.py  test_batch.py  test_cgp.py  test_utils.py
tests/audio/: 00000_foreground.flac  00000_mixture.flac  00001_foreground.flac  00001_mixture.flac  00002_foreground.flac  00002_mixture.flac
tests/matlab/: README.md  cgp.m
tests/matlab/utils/: calc_TF_scores.m  calc_col_corr.m  gen_cochlear_fb.m  gen_tmp_mod_LPF.m  removeSilentFrames.m  stdft.m
